# polymarket-us-demo

./: .env.example  .gitignore  01_browse_markets.py  02_search_markets.py  03_orderbook_viewer.py  04_account_portfolio.py  05_place_order.py  06_async_dashboard.py  07_websocket_stream.py  08_markets_by_date.py  09_odds_calculator.py  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
doc/: odds-calculator-spec.md
