[project]
name = "polymarket-us-init"
version = "0.1.0"
description = "Python scripts demonstrating the Polymarket US retail API and SDK"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.80.0",
    "httpx>=0.27",
    "openai>=1.0",
    "polymarket-us>=0.1.2",
    "python-dotenv>=1.2.1",
    "reportlab>=4.0",
    "tzdata>=2024.1",
]
